--- a/api/package.json
+++ b/api/package.json
@@ -1,9 +1,14 @@
 {
   "name": "api",
-  "version": "0.0.0",
+  "author": {
+    "name": "Andreea Voicu"
+  },
+  "version": "1.0.0",
+  "description": "The backend of the EvenWish project",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node app.js",
+    "foo": "echo bar"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -15,6 +20,11 @@
     "pg": "^8.7.1",
     "pug": "2.0.0-beta11",
     "sequelize": "^6.14.1",
-    "sqlite3": "^5.0.2"
+    "sqlite3": "^5.0.2",
+    "dotenv": "~16.0.1"
+  },
+  "engines" : {
+    "node": ">=18.0.0",
+    "npm": ">=8.9.0"
   }
 }
